Fix Maven command to include clean package step

--- a/.github/workflows/create-dockerfiles.yml
+++ b/.github/workflows/create-dockerfiles.yml
@@ -67,7 +67,7 @@ jobs:
           build_spring_boot() {
             MODULE=$1
             echo "Building Spring Boot module $MODULE (multi-arch)..."
-            mvn -pl $MODULE spring-boot:build-image \
+            mvn -pl $MODULE clean package spring-boot:build-image \ 
               -DskipTests=true \
               -Dspring-boot.build-image.platform=linux/amd64,linux/arm64
           }
