--- a/.github/workflows/create-dockerfiles.yml
+++ b/.github/workflows/create-dockerfiles.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version tag to use for Docker images (e.g. v3.0.0)'
+        description: 'Version tag to use for Docker images (e.g. 3.0.0)'
         required: true
         type: string
 
@@ -52,6 +52,9 @@ jobs:
           echo "JAVA_17_HOME=$JAVA_HOME_17_X64" >> $GITHUB_ENV
           echo "JAVA_HOME=$JAVA_HOME_8_X64" >> $GITHUB_ENV
 
+      - name: Build Project
+        run: mvn install -DskipTests=true
+        
       - name: Determine Version
         id: version
         run: |
@@ -59,10 +62,12 @@ jobs:
             VERSION="${{ github.event.inputs.version }}"
           else
             VERSION="${GITHUB_REF#refs/tags/}"
+            # Strip leading 'v' if present (e.g. v3.0.4 → 3.0.4)
+            VERSION="${VERSION#v}"
           fi
           echo "Using version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
-          
+ 
       - name: Build All Docker Images
         run: |
           export DOCKER_REPO=${{ secrets.docker_username }}
