--- a/.github/workflows/create-dockerfiles.yml
+++ b/.github/workflows/create-dockerfiles.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   release:
     types: [released]
-
+    
 jobs:
   latest:
     runs-on: ubuntu-22.04
@@ -48,23 +48,6 @@ jobs:
 
       - name: Build Project
         run: mvn install -DskipTests=true
-        
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-             
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        
-      - name: Build Docker Images
-        run: |
-          mvn docker:build -pl agent-module/agent
-          mvn docker:build -pl hbase/hbase-docker
-          mvn jib:build -pl collector-starter
-          mvn jib:build -pl web-starter
-          mvn jib:build -pl batch
-          mvn jib:build -pl collector
-          mvn jib:build -pl web
-          docker images
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -72,9 +55,25 @@ jobs:
           username: ${{ secrets.docker_username }}
           password: ${{ secrets.docker_token }}
 
+      - name: Build Docker Images
+        run: |
+          mvn docker:build -pl agent-module/agent
+          mvn docker:build -pl flink
+          mvn docker:build -pl hbase/hbase-docker
+          # Set up Buildx for multi-arch Spring Boot builds
+          docker buildx create --use --name multiarch-builder || true
+          docker buildx inspect --bootstrap
+          mvn -pl collector-starter clean package spring-boot:build-image -DskipTests=true -Dspring-boot.build-image.platform=linux/amd64,linux/arm64
+          mvn -pl web-starter clean package spring-boot:build-image -DskipTests=true -Dspring-boot.build-image.platform=linux/amd64,linux/arm64
+          mvn -pl batch clean package spring-boot:build-image -DskipTests=true -Dspring-boot.build-image.platform=linux/amd64,linux/arm64
+          mvn -pl collector clean package spring-boot:build-image -DskipTests=true -Dspring-boot.build-image.platform=linux/amd64,linux/arm64
+          mvn -pl web clean package spring-boot:build-image -DskipTests=true -Dspring-boot.build-image.platform=linux/amd64,linux/arm64
+          docker images
+          
       - name: Push to Docker Hub
         run: |
           docker push --all-tags ${{ secrets.docker_username }}/pinpoint-agent
+          docker push --all-tags ${{ secrets.docker_username }}/pinpoint-flink
           docker push --all-tags ${{ secrets.docker_username }}/pinpoint-hbase
           docker push --all-tags ${{ secrets.docker_username }}/pinpoint-batch
           docker push --all-tags ${{ secrets.docker_username }}/pinpoint-collector
