--- a/.github/workflows/create-dockerfiles.yml
+++ b/.github/workflows/create-dockerfiles.yml
@@ -40,6 +40,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
           
   build-and-push-dockerfile-images:
+    runs-on: ubuntu-22.04
+    steps:
       - name: Set JAVA_HOME
         run: |
           echo "JAVA_8_HOME=$JAVA_HOME_8_X64" >> $GITHUB_ENV
@@ -70,6 +72,8 @@ jobs:
           docker push --all-tags ${{ secrets.docker_username }}/pinpoint-hbase
 
   build-and-push-spring-boot-docker-images:
+    runs-on: ubuntu-22.04
+    steps:
       - name: Set JAVA_HOME
         run: |
           echo "JAVA_8_HOME=$JAVA_HOME_8_X64" >> $GITHUB_ENV
